@@ -1,4 +1,4 @@
-NuttX TODO List (Last updated April 12 2011)
+NuttX TODO List (Last updated April 19 2011)
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 nuttx/
@@ -476,16 +476,6 @@ o Graphics subystem (graphics/)
                http://nuttx.sourceforge.net/NXGraphicsSubsystem.html#testcoverage
   Status:      Open
   Priority:    Medium
-
-  Description: The apps/examples/nx test using lcd/p14201.c and the configs/lm3s6965-ek
-               configuration shows two single pixel-wide anomalies.  One along
-               column zero is clearly caused by the NX windowing logic.  It is
-               not certain if these are consequences of the 4bpp logic or if these
-               are anomalies that have always been in NX, but are only visible
-               now at the low resolution of the p14201 LCD (128x96).
-               Update: Same defects in the LPCXpresso a 1bpp (96x64).
-  Status:      Open
-  Priority:    Low (unless you need the p13201 then it is certainly higher).
 
 o Pascal Add-On (pcode/)
   ^^^^^^^^^^^^^^^^^^^^^^
